[package]
name = "pp_lib_example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dwcpn = { git = "https://github.com/JamesDingle/dwcpn" }
# dwcpn = { git = "https://github.com/JamesDingle/dwcpn", branch="main" }
dwcpn = { path="/Users/james/work/code/dwcpn"}
ndarray = "0.15.4"
clap = "3.0.7"
netcdf = "0.7.0"
indicatif = "0.17.0"
